<resources>
    <string name="app_name">GoGoShip</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>


    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="welcome">WELCOME</string>
    <string name="my_orders">My orders</string>
    <string name="my_profile">My Profile</string>
    <string name="currancy">Currency</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="province">Province</string>
    <string name="address">Address</string>
    <string name="landmark">Landmark</string>
    <string name="password">Password</string>
    <string name="finish">Finish</string>
    <string name="a_fullship_company">A FullShip Company</string>
    <string name="my_wallet">My Wallet</string>
    <string name="transaction_detail">Transaction Details</string>
    <string name="date">Date</string>
    <string name="buy_me">Buy me</string>
    <string name="detail">Details</string>
    <string name="fastpay_add_fund">FastPay Add Funds</string>
    <string name="choose_amount">Please choose amount</string>
    <string name="please_note">Please Note</string>
    <string name="process_cannot_undone">This process cannot be undone</string>
    <string name="checkout">Checkout</string>
    <string name="apply_filter">Apply Filters</string>
    <string name="error_occured">An error occured</string>
    <string name="try_again">Try Again</string>
    <string name="ticket_category">Ticket category:</string>
    <string name="ticket_opening">Ticket opening date:</string>
    <string name="ticket_updating">Ticket Updated:</string>
    <string name="credit_debit">Credit / Debit Card</string>
    <string name="enter_16_digit">Please enter the 16 digits</string>
    <string name="enter_amount">Enter the Amount (minimum is $10)</string>
    <string name="sixteen_digit">16 digits</string>
    <string name="expire_date">Expire Date</string>
    <string name="cvv">CVV</string>
    <string name="name_on_card">Name on the card</string>
    <string name="currancy_text">From this page you will know latest update about \n currancy Exchange that we change you for</string>
    <string name="last_updated">Last Updated</string>
    <string name="create_support_ticket">Create Support Ticket</string>
    <string name="select_category">Select Category</string>
    <string name="explain_your_problem">Explain your problem</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="optional">(optional)</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="complete">Completed</string>
    <string name="archive">Archived</string>
    <string name="cancelled">Cancelled</string>
    <string name="search">Search</string>
    <string name="filter_by">Filter By</string>
    <string name="quick_search">Quick Search</string>
    <string name="notifications">Notifications</string>
    <string name="choose_your_language">Choose Your Language</string>
    <string name="english">English</string>
    <string name="arabil">Arabic</string>
    <string name="kurdish">Kurdish</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="phone">Phone</string>
    <string name="remember_me">Remember me</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="signup_now">Sign Up now</string>
    <string name="name_profile">Name :</string>
    <string name="address_profile">Address :</string>
    <string name="province_profile">Province :</string>
    <string name="phone_profile">Phone :</string>
    <string name="email_profile">Email :</string>
    <string name="password_profile">Password :</string>
    <string name="gender_profile">Gender :</string>
    <string name="update">Update</string>
    <string name="your_balance">Your Balance</string>
    <string name="total_purchase">Total Purchase</string>
    <string name="transaction_text">To know all transaction made on your account\njust click on Transaction Details Below</string>
    <string name="credit_purchase">Credit Purchase</string>
    <string name="wallet_empty">Your Wallet Is Empty!</string>
    <string name="wallet_empty_text">Look like there no credit in \n your account, kindly purchase \nmore to continue.</string>
    <string name="new_order">New Order</string>
    <string name="product_name">Product Name</string>
    <string name="product_url">Product URL</string>
    <string name="product_specs">Product Specs</string>
    <string name="product_color">Product Color</string>
    <string name="product_size">Product Size</string>
    <string name="quantity">Quantity</string>
    <string name="any_note">Any Note?</string>
    <string name="have_coupon_code">Do you have coupon code?</string>
    <string name="buy">Buy</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="verify">Verify</string>
    <string name="otp_code">OTP Code</string>
    <string name="support_text">If you have any problem with one of your orders \n you can contact us via</string>
    <string name="or_call">Or call: 0750 444 4000</string>
    <string name="or_open_support">Or open support ticket</string>
    <string name="create_ticket">+ Create Ticket</string>
    <string name="slide_one_text">You Search forwhat would\n you like to purchase</string>
    <string name="slide_two_text">And we purchase it for you</string>
    <string name="slide_three_text">Deliver it your doorstep</string>
    <string name="slide_four_text">Hurray, We did it</string>
    <string name="please_check_your_internet_connection">Please Check your Internet Connection....</string>
    <string name="gender">Gender</string>
    <string name="full_name">Full Name</string>
    <string name="forget_password">Forgot Password</string>
    <string name="please_connect_internet_connection">Please Connect Internet Connection ?  </string>
    <string name="retry">Retry</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="are_you_sure_to_logout">Are you sure to Logout?</string>
    <string name="update_password">Update Password</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="enter_no_for_otp">Please enter your number for otp</string>
    <string name="enter_mob_no">enter your number</string>
    <string name="get_otp">Get Otp</string>
    <string name="varify">Varify</string>
    <string name="order_n">Order no:</string>
    <string name="these_permissions_are_mandatory_for_this_application_please_allow_access">These Permissions are Mandatory for this Application. Please Allow Access.</string>
    <string name="ok">Ok</string>
    <string name="coupon_code">Enter Coupon Code</string>
    <string name="add">Add</string>
    <string name="we_are_sorry">We are sorry!</string>
    <string name="order_details">Order Details</string>
    <string name="order_sent_review_team">Your Order Sent \n to Review Team </string>
    <string name="back_home">Back to Home</string>
    <string name="keep_shoping">Keep Shopping</string>
    <string name="have_no_support_ticket">You Have No Support Ticket</string>
    <string name="zen_cash_add_fund">ZenCash Add Fund</string>
    <string name="all">All</string>
    <string name="add_insurance">Add Insurance</string>
    <string name="sea">Sea</string>
    <string name="land">Land</string>
    <string name="air">Air</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="quantity_order">QTY:</string>
    <string name="colr">Color:</string>
    <string name="size_orde">Size:</string>
    <string name="coupen_code_order">Coupon code:</string>
    <string name="insurance_orderr">Insurance:</string>
    <string name="fees_orderr">Fees:</string>
    <string name="approved_order">Approved</string>
    <string name="status_orderr">Status:</string>
    <string name="back_exit">Please click BACK again to exit</string>
    <string name="please_enter_email">Please enter phone no</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_mail">Please enter email</string>
    <string name="please_varify_phone">Please varify phone</string>
    <string name="please_enter_address">Please enter address</string>
    <string name="please_enter_landmark">Please enter landmark</string>
    <string name="please_enter_old_password">Please enter old password</string>
    <string name="please_enter_product_name">Please enter product name</string>
    <string name="please_enter_product_url">Please enter product url</string>
    <string name="please_enter_product_color">Please enter product color</string>
    <string name="please_enter_product_size">Please enter product size</string>
    <string name="please_enter_product_note">Please enter order note</string>
    <string name="please_upload_the_image">Please upload the image</string>
    <string name="please_choose_transport_mode">Please choose transport mode</string>
    <string name="change_language">Change Language</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="order_m">Order message:</string>
    <string name="total_sum">Total</string>
    <string name="login_signup_dialog">Please login or signup your account</string>
    <string name="copy_order">Copy Link</string>
    <string name="website_not_support_text">we are not fully supporting this website like others</string>
    <string name="n11_not_work_popup">N11 site not working on your network , please turn on your Turkish VPN if you have to Visit this website.</string>
</resources>