<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:paddingBottom="20dp">

    <ImageView
        android:layout_width="25sp"
        android:layout_height="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/close"
        android:id="@+id/img_cancel_zencash"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zen_cash_add_fund"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_cancel_zencash"
        android:textSize="@dimen/fastpay_add_fund_txt_size"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:id="@+id/txt_fastpay_fund"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_fastpay_fund"
        android:textSize="@dimen/fastpay_choose_amt"
        android:textColor="@color/light_gray"
        android:fontFamily="sans-serif-medium"
        android:id="@+id/txt_choose_amt"
        android:layout_marginTop="20dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txt_choose_amt"
        android:orientation="vertical"
        android:id="@+id/linear_main"
        >


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="4"
            android:layout_gravity="center"
            android:id="@+id/zencash_recycler"
            tools:listitem="@layout/zencash_adapter"
            android:paddingTop="10dp"
            />


    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linear_main"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/please_note"
        android:id="@+id/txt_please_note"
        android:textSize="@dimen/fastpay_add_fund_txt_size"
        android:textColor="@color/light_gray"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txt_please_note"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/process_cannot_undone"
        android:id="@+id/txt_process"
        android:textSize="@dimen/fastpay_add_fund_txt_size"
        android:textColor="@color/light_gray"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_process"
        android:layout_marginTop="20dp"
        android:background="@drawable/varify_border"
        android:id="@+id/cons_check_out"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/checkout"
            android:textColor="@color/black"
            android:layout_marginRight="20dp"
            android:textSize="@dimen/fastpay_add_fund_txt_size"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>