<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:paddingBottom="20dp"
    >

    <ImageView
        android:layout_width="25sp"
        android:layout_height="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/close"
        android:id="@+id/img_cancel_credit"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit_debit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_cancel_credit"
        android:textSize="@dimen/fastpay_add_fund_txt_size"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:id="@+id/txt_credit_debit"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_16_digit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_credit_debit"
        android:textSize="@dimen/my_order_list_product_text_size"
        android:textColor="@color/light_gray"
        android:fontFamily="sans-serif-medium"
        android:id="@+id/txt_choose_amt"
        android:layout_marginTop="20dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txt_choose_amt"
        android:orientation="vertical"
        android:id="@+id/linear_main"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:weightSum="4"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/credit_debit_edit_height"
                android:orientation="horizontal"
                android:layout_marginEnd="10dp"
                android:background="@drawable/add_fund_rupee_background"
                android:layout_weight="1"
                android:gravity="start"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_amount"
                    android:textColorHint="@color/light_gray"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/credit_debit_edit_txt_size"
                    android:textColor="@color/black"
                    android:paddingStart="20dp"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/credit_debit_edit_height"
                android:orientation="horizontal"
                android:layout_marginEnd="10dp"
                android:background="@drawable/add_fund_rupee_background"
                android:layout_marginTop="20dp"
                android:gravity="start"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sixteen_digit"
                    android:textColorHint="@color/light_gray"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/credit_debit_edit_txt_size"
                    android:textColor="@color/black"
                    android:paddingStart="20dp"
                    />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/credit_debit_edit_height"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="2"
                >
                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="@dimen/credit_debit_edit_height"
                    android:background="@drawable/add_fund_rupee_background"
                    android:gravity="start"
                    android:layout_weight="1"
                    android:layout_marginEnd="40dp"
                    >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/expire_date"
                        android:textColorHint="@color/light_gray"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/credit_debit_edit_txt_size"
                        android:textColor="@color/black"
                       android:paddingStart="20dp"
                        />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="@dimen/credit_debit_edit_height"
                    android:layout_weight="1"
                    android:background="@drawable/add_fund_rupee_background"
                    android:layout_gravity="right"
                    >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cvv"
                        android:textColorHint="@color/light_gray"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/credit_debit_edit_txt_size"
                        android:textColor="@color/black"
                       android:paddingStart="20dp"
                        />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/credit_debit_edit_height"
                android:orientation="horizontal"

                android:background="@drawable/add_fund_rupee_background"
                android:layout_marginTop="20dp"
                android:gravity="start"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_on_card"
                    android:textColorHint="@color/light_gray"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/credit_debit_edit_txt_size"
                    android:textColor="@color/black"
                    android:paddingStart="20dp"
                    />


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/linear_main"
        android:layout_marginTop="20dp"
        android:background="@drawable/varify_border"
        android:id="@+id/cons_login"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/checkout"
            android:textColor="@color/black"
            android:layout_marginEnd="20dp"
            android:textSize="@dimen/cons_btn_default_txt_size"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>