<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <ImageView
        android:layout_width="@dimen/connection_lost_width_height"
        android:layout_height="@dimen/connection_lost_width_height"
        android:id="@+id/img_connection_lost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:src="@drawable/sorry"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/img_connection_lost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/we_are_sorry"
        android:textSize="@dimen/we_are_sorry_txt_size"
        android:textColor="@color/black"
        android:id="@+id/we_sorry"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/we_sorry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/error_occured"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/an_error_txt_size"
        android:id="@+id/error_occured"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/cons_btn_default_width"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/error_occured"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/varify_border"
        android:id="@+id/card_try_again"
        android:layout_gravity="center_horizontal"
        >

        <!--<ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_baseline_check_circle_outline_24"
            android:id="@+id/check_circle"
            android:layout_marginRight="5dp"
            />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/try_again"
            android:textColor="@color/black"
            android:layout_marginEnd="10dp"
            android:textSize="@dimen/cons_btn_default_txt_size"
           android:layout_marginStart="10dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>