<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">






    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        >




        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/yellow"
            android:id="@+id/order_list_my_orders"
            app:layout_constraintTop_toTopOf="parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_wallet"
                android:textSize="22sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
               app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/wallets"
                android:layout_marginEnd="40dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>




        <ImageView
            android:layout_width="@dimen/my_wallet_layout_width_height"
            android:layout_height="@dimen/my_wallet_layout_width_height"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/bg_picks"
            android:id="@+id/img_bg_picks"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/img_bg_picks"
            android:text="@string/wallet_empty_text"
            android:gravity="center"
            android:textColor="@color/light_gray"
            android:id="@+id/txt_long"
            android:textSize="@dimen/wallet_empty_bottom_txt"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/txt_long"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="20dp"
            android:text="@string/wallet_empty"
            android:textSize="@dimen/wallet_empty_txt_size"
            android:textColor="@color/black"
            />



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:id="@+id/con_credit_purchase"
            app:layout_constraintTop_toBottomOf="@+id/img_bg_picks"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:background="@drawable/varify_border"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/credit_purchase"
                android:textColor="@color/black"
                android:layout_marginEnd="10dp"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/plus"
                android:backgroundTint="@color/yellow"
                android:layout_marginEnd="20dp"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

